--- a/css/style.css
+++ b/css/style.css
@@ -10,19 +10,33 @@ nav li {
     border-right: solid #333 1px; }
 nav a {
   display: inline-block;
-  text-decoration: none;
-  height: 30px; }
+  text-decoration: none; }
+
+footer {
+  height: 300px;
+  margin-top: 50px;
+  background-color: #333;
+  color: #eee; }
+
+.jump-to-top {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 75px;
+  width: 250px;
+  margin-right: 30px;
+  margin-bottom: 20px;
+  background-color: #cccccb88; }
 
 h2 {
   color: dodgerblue; }
 
 body {
   background-color: #eee;
-  color: #333; }
-
-.jump-to-top {
-  position: fixed;
-  bottom: 0;
-  right: 0; }
+  color: #333;
+  font-family: Helvatica sans-serif; }
 
 /*# sourceMappingURL=style.css.map */
