resolution of banner image

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,13 @@ nav a {
   display: inline-block;
   text-decoration: none; }
 
+banner image {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: -1; }
+
 footer {
   height: 300px;
   margin-top: 50px;
