--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@ $primary-color: #333;
 $primary-background: #eee;
 
 @import "./partials/nav";
+@import "./partials/banner";
 @import "./partials/footer";
 @import "./partials/components";
 
