--- a/scss/partials/nav.scss
+++ b/scss/partials/nav.scss
@@ -1,4 +1,10 @@
 nav {
+  position: fixed;
+  // position: fixed;
+// top: 0px;
+width: 100%;
+// background-color: #242935;
+// padding: 10px 0 15px 0
   ul {
   display: flex;
   flex-direction: row;
