--- a/scss/partials/footer.scss
+++ b/scss/partials/footer.scss
@@ -1,9 +1,10 @@
 footer {
 
-    height: 300px;
+    height: 100px;
     margin-top: 50px;
     background-color: $primary-color;
     color:  $primary-background;
+    text-align:  center;
 
 
 }
