--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,16 +1,18 @@
 $primary-color: #333;
-$primary-background: #eee;
+$primary-background: #f3f3f3;
 
 @import "./partials/nav";
 @import "./partials/banner";
 @import "./partials/footer";
 @import "./partials/components";
+@import "./partials/parallax-image";
 
 h2 {
-  color: dodgerblue
+  color: #303841
 }
 body {
   background-color: $primary-background;
   color: $primary-color;
   font-family: Helvatica sans-serif;
 }
+ a:visited { text-decoration: none; text-decoration: underline; color:$primary-color; }
