--- a/scss/partials/banner.scss
+++ b/scss/partials/banner.scss
@@ -4,6 +4,7 @@ $hero-height: 100vh;
   background: url('../assets/HatchfulExport-All/linkedin_banner_image_2.png') 50% no-repeat;
   background-size: cover;
   height: $hero-height;
+  // width: 50%;
   text-align: center;
   display: flex;
   align-items: center;
