--- a/scss/partials/parallax-image.scss
+++ b/scss/partials/parallax-image.scss
@@ -1,12 +1,12 @@
 
 .bg1 {
-  background-image: url("../assets/treads-1544271701145-551.jpg");
+  background-image: url("../assets/landscape63-2024.jpg");
 }
 .bg2 {
-  background-image: url("../assets/treads-1544271701145-551.jpg");
+  background-image: url("../assets/landscape63-2024.jpg");
 }
 .bg3 {
-  background-image: url("../assets/vectorstock_858738.jpg");
+  background-image: url("../assets/vectorstock_969696.jpg");
   // background-image: url("../assets/vectorstock_969696.jpg");
 }
 .bg4 {
@@ -16,9 +16,9 @@
 .parallax-image {
     /* The image used */
 
-
+    // //
     /* Full height */
-    height: 600px;
+    height: 100vh;
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
